# camava

./: .gitignore  CMakeLists.txt  Changelog  README  README.md
simpletest_camava/: CMakeLists.txt  camava_camava.cpp
src/: CMakeLists.txt  camava.cpp  camava.h  camava_cv.cpp  camava_cv.h  camava_still.cpp  camava_still.h  camava_still_cv.cpp  camava_still_cv.h  camavatypes.h  raspicam.cpp  raspicam.h  raspicam_cv.cpp  scaler.h
src/private/: exceptions.h  private_impl.cpp  private_impl.h  private_types.h  threadcondition.cpp  threadcondition.h
src/private_still/: private_still_impl.cpp  private_still_impl.h
utils/: CMakeLists.txt  camava_cv_still_test.cpp  camava_cv_test.cpp  camava_still_test.cpp  camava_test.cpp  raspicam_cv_test.cpp  raspicam_test.cpp
